add next lecture

--- a/lectures/Lecture_1.ipynb
+++ b/lectures/Lecture_1.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:551530f872e0a18fdcd5934817f04613729080aee30cdd7b223537689e5004a8"
+  "signature": "sha256:0f46339f673dded86055b6a8d87af4e7af83d24d4c44fd9cf72749dcf4f4e5e3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -213,10 +212,8 @@
       "internals": {
        "frag_helper": "fragment_end",
        "frag_number": 1,
-       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -228,6 +225,12 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "notes"
       }
@@ -242,10 +245,8 @@
       "internals": {
        "frag_helper": "fragment_end",
        "frag_number": 1,
-       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -257,6 +258,12 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "subslide_end",
       "slideshow": {
        "slide_type": "notes"
       }
@@ -286,10 +293,8 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
-       "slide_helper": "subslide_end"
+       "frag_number": 1
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "skip"
       }
@@ -301,6 +306,12 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 17,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "fragment"
       }
@@ -316,7 +327,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -333,7 +344,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -350,7 +361,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -369,7 +380,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -385,7 +396,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 17
       },
       "slideshow": {
        "slide_type": "skip"
@@ -407,7 +418,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -423,7 +434,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -444,7 +455,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -475,7 +486,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -512,7 +523,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -535,7 +546,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 17,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -561,11 +572,9 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
-       "slide_helper": "subslide_end",
+       "frag_number": 17,
        "slide_type": "subslide"
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -577,6 +586,12 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 30,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "fragment"
       }
@@ -591,7 +606,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -621,7 +636,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -645,7 +660,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "-"
@@ -664,7 +679,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -752,7 +767,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -777,7 +792,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "-"
@@ -796,7 +811,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -821,7 +836,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -843,7 +858,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "-"
@@ -873,7 +888,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -889,7 +904,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -910,7 +925,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -932,7 +947,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -948,7 +963,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "notes"
@@ -970,7 +985,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "skip"
@@ -1004,7 +1019,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1
+       "frag_number": 30
       },
       "slideshow": {
        "slide_type": "skip"
@@ -1075,7 +1090,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 1,
+       "frag_number": 30,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
