--- a/lectures/Lecture_1.1.ipynb
+++ b/lectures/Lecture_1.1.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:328acd0aa23f9f17d544678e77d04c7da160742aa885144c7fce35b51f6d6a0c"
+  "signature": "sha256:b2782706cfdb0c16328005774286d5ccf47656909914ff5aeff2cbf9ca1a3b93"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +19,9 @@
       }
      },
      "source": [
-      "# Artificial Intelligence for Health Metricians"
+      "# Artificial Intelligence for Health Metricians\n",
+      "\n",
+      "J://Project/Machine-Learning/ML4HM/weather-numeric.csv"
      ]
     },
     {
@@ -140,6 +141,9 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "slide_type": "subslide"
+      },
       "slideshow": {
        "slide_type": "slide"
       }
@@ -152,6 +156,10 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "notes"
       }
@@ -168,6 +176,11 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -181,6 +194,11 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
