keep edits in the repo

--- a/Week_1/Exercise_1.ipynb
+++ b/Week_1/Exercise_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f1c8a3bd15fa894edd8691b68419ae0766f6268f857ca25ffe39e88bf76ddbcd"
+  "signature": "sha256:057063db0b1ebb24990f9e2ee7df4db748a3c11628d237ffb771f39ba58117e3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,14 +31,13 @@
       "# an easy way to get the data necessary for following along with part 1 of the python intro\n",
       "\n",
       "import numpy, pandas as pd\n",
-      "df = pd.read_csv('https://github.com/swcarpentry/patient-data/raw/master/inflammation-01.csv',\n",
+      "df = pd.read_csv('inflammation-01.csv',\n",
       "                header=None)\n",
       "data = numpy.array(df)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -111,7 +110,7 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "df = pd.read_csv('https://github.com/aflaxman/AI4HM/raw/master/data/weather-numeric.csv')"
+      "df = pd.read_csv('weather-numeric.csv')"
      ],
      "language": "python",
      "metadata": {
