get ready for making ex 2

--- a/Week_1/Exercise_1_Solutions.ipynb
+++ b/Week_1/Exercise_1_Solutions.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5a7e9dc25db285892ca192316635a832b1461fe93211e5cd0b791b4565dded4c"
+  "signature": "sha256:8094d329dfff22a20f88f203039fe46969d76df7960bf88bcd51ba9bad970f85"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,7 +38,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -82,7 +82,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -114,13 +114,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 3,
        "text": [
         "'*name*'"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -146,13 +146,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 4,
        "text": [
         "'hm'"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -192,7 +192,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -269,7 +269,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 6,
        "text": [
         "    outlook  temperature  humidity  windy play\n",
         "0     sunny           85        85  False   no\n",
@@ -280,7 +280,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -296,7 +296,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -328,7 +328,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -347,13 +347,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 9,
        "text": [
         "'no'"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -385,13 +385,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 10,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -413,7 +413,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -432,7 +432,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -480,13 +480,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 13,
        "text": [
         "71.42857142857143"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -517,13 +517,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 14,
        "text": [
         "(71.428571428571431, ('humidity', 85))"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -567,7 +567,7 @@
       "                # more complicated prediction function now...\n",
       "                def predict_col_val(s):\n",
       "                    if s[col1] == val1:\n",
-      "                        return 'no'\n",
+      "                        return 'yes'\n",
       "                    elif s[col2] == val2:\n",
       "                        return 'no'\n",
       "                    else:\n",
@@ -584,21 +584,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 15,
        "text": [
-        "(78.571428571428569, ('humidity', 70, 'outlook', 'sunny'))"
+        "(85.714285714285708, ('humidity', 70, 'outlook', 'sunny'))"
        ]
       }
      ],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 15
     }
    ],
    "metadata": {}
