--- a/Week_1/Exercise_1_Solutions.ipynb
+++ b/Week_1/Exercise_1_Solutions.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8094d329dfff22a20f88f203039fe46969d76df7960bf88bcd51ba9bad970f85"
+  "signature": "sha256:d37e45557b594837aed255fc9b2e51257c69ac386eace1197e1be6e90dbde568"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -99,10 +99,12 @@
      "collapsed": false,
      "input": [
       "def fence(orig_str, fence_char):\n",
-      "    \"\"\" fence returns new string that has the wrapper character at the beginning\n",
+      "    \"\"\" fence returns new string that has the wrapper character\n",
+      "    at the beginning\n",
       "    and end of the original string\"\"\"\n",
       "    \n",
-      "    assert type(fence_char) == str and len(fence_char) == 1, 'fence char must be str of length one'\n",
+      "    assert type(fence_char) == str and len(fence_char) == 1, \\\n",
+      "        'fence char must be str of length one'\n",
       "    \n",
       "    return fence_char + orig_str + fence_char\n",
       "\n",
@@ -517,13 +519,60 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 16,
        "text": [
         "(71.428571428571431, ('humidity', 85))"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "acc.order()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "windy        False       35.714286\n",
+        "outlook      overcast    35.714286\n",
+        "humidity     80          50.000000\n",
+        "temperature  75          50.000000\n",
+        "humidity     65          57.142857\n",
+        "temperature  83          57.142857\n",
+        "             81          57.142857\n",
+        "             70          57.142857\n",
+        "             69          57.142857\n",
+        "             68          57.142857\n",
+        "outlook      rainy       57.142857\n",
+        "temperature  64          57.142857\n",
+        "humidity     86          57.142857\n",
+        "             75          57.142857\n",
+        "             70          57.142857\n",
+        "             96          57.142857\n",
+        "             90          64.285714\n",
+        "temperature  72          64.285714\n",
+        "windy        True        64.285714\n",
+        "outlook      sunny       71.428571\n",
+        "humidity     95          71.428571\n",
+        "temperature  65          71.428571\n",
+        "humidity     91          71.428571\n",
+        "temperature  71          71.428571\n",
+        "humidity     85          71.428571\n",
+        "temperature  80          71.428571\n",
+        "             85          71.428571\n",
+        "dtype: float64"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
