--- a/Week_1/Lecture_1a.ipynb
+++ b/Week_1/Lecture_1a.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0f46339f673dded86055b6a8d87af4e7af83d24d4c44fd9cf72749dcf4f4e5e3"
+  "signature": "sha256:0d2fa975688c96493acaf054f7db0d4e76582574e36bd179d9a0242b56d22abb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -371,7 +371,10 @@
       }
      },
      "source": [
-      "## A computer program is said to learn from experience $E$ with respect to some class of tasks $T$ and performance measure $P$, if its performance at tasks in $T$, as measured by $P$, improves with experience $E$.\n",
+      "## A computer program is said to learn from experience $E$\n",
+      "with respect to some class of tasks $T$ and performance \n",
+      "measure $P$, if its performance at tasks in $T$, as \n",
+      "measured by $P$, improves with experience $E$.\n",
       "###---Tom Mitchell"
      ]
     },
