--- a/Week_2/Lecture_2a.ipynb
+++ b/Week_2/Lecture_2a.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:753d7b56fdd918372b672bf33b2a603f725639c09389558f878491fac2127d31"
+  "signature": "sha256:cd8bfb01cddaf0fa337e10c70023dc01cffadf1a4eb51be0501453ec9650fbe9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,6 +30,24 @@
      },
      "source": [
       "# Any Questions?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# No Class Next Monday"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img  src=\"RRBMFD725FFYGNG0IGDYSMKN5KLYMAQL.png\"/>"
      ]
     },
     {
