ready for week 3

--- a/Week_3/Lecture_3.ipynb
+++ b/Week_3/Lecture_3.ipynb
@@ -1,8 +1,7 @@
 {
  "metadata": {
-  "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:396acc651cb7fcca4350e22df57aef44f34f20a64cab21e91a40ef102a526174"
+  "signature": "sha256:32cc9ed11d4f262907dbbb634f7fe161428f3c716fd07fe9c6c1fa9e9a0932a5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,8 +43,7 @@
        "slide_type": "skip"
       }
      },
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -201,8 +199,10 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -217,7 +217,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
-       "frag_number": 12
+       "frag_number": 12,
+       "slide_type": "subslide"
       },
       "slideshow": {
        "slide_type": "slide"
@@ -229,7 +230,15 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "<img  src=\"KRLOFAB77WFKIELGP5KNAF48Q7CN0D88.png\"/>"
      ]
@@ -239,10 +248,11 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 13
+       "frag_number": 14,
+       "slide_type": "subslide"
       },
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "slide"
       }
      },
      "source": [
@@ -251,7 +261,17 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "<img  src=\"U889W1SOUUAHAI7I2PUC6Q2RDGHGBXXK.png\"/>"
      ]
@@ -261,14 +281,15 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 14
+       "frag_number": 14,
+       "slide_type": "subslide"
       },
       "slideshow": {
        "slide_type": "slide"
       }
      },
      "source": [
-      "* Who wants more?  Who wants in?"
+      "* Who wants more?"
      ]
     },
     {
@@ -276,7 +297,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -291,8 +312,30 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
+       "slide_type": "subslide"
+      },
       "slideshow": {
        "slide_type": "slide"
+      }
+     },
+     "source": [
+      "* Who wants in?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
       }
      },
      "source": [
@@ -302,6 +345,13 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -314,6 +364,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -336,7 +388,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -358,171 +410,13 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15
+       "frag_number": 14
       },
       "slideshow": {
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>sh110g</th>\n",
-        "      <th>hv247</th>\n",
-        "      <th>hv246</th>\n",
-        "      <th>hv227</th>\n",
-        "      <th>sh118f</th>\n",
-        "      <th>hv243a</th>\n",
-        "      <th>hv243c</th>\n",
-        "      <th>hv243b</th>\n",
-        "      <th>hv225</th>\n",
-        "      <th>hv209</th>\n",
-        "      <th>hv208</th>\n",
-        "      <th>hv243d</th>\n",
-        "      <th>hv207</th>\n",
-        "      <th>hv206</th>\n",
-        "      <th>hv212</th>\n",
-        "      <th>hv221</th>\n",
-        "      <th>hv210</th>\n",
-        "      <th>hv211</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "   sh110g  hv247  hv246  hv227  sh118f  hv243a  hv243c  hv243b  hv225  hv209  \\\n",
-        "0       0      1      0      1       0       1       0       1      0      0   \n",
-        "1       0      1      0      0       0       1       0       0      1      0   \n",
-        "2       0      1      0      0       0       1       0       1      1      0   \n",
-        "3       0      0      0      1       0       0       0       0      1      0   \n",
-        "4       0      0      1      1       0       0       0       0      1      0   \n",
-        "\n",
-        "   hv208  hv243d  hv207  hv206  hv212  hv221  hv210  hv211  \n",
-        "0      1       0      1      1      0      0      0      0  \n",
-        "1      0       0      1      1      0      0      0      0  \n",
-        "2      0       0      1      0      0      0      0      1  \n",
-        "3      0       0      0      0      0      0      0      0  \n",
-        "4      0       0      0      0      0      0      0      0  "
-       ]
-      }
-     ],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -535,7 +429,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -543,126 +437,14 @@
        "slide_type": "-"
       }
      },
-     "outputs": [
-      {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>full name</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>hv206</th>\n",
-        "      <td>                        has electricity</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv207</th>\n",
-        "      <td>                              has radio</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv208</th>\n",
-        "      <td>                         has television</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv209</th>\n",
-        "      <td>                       has refrigerator</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv210</th>\n",
-        "      <td>                            has bicycle</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv211</th>\n",
-        "      <td>                 has motorcycle/scooter</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv212</th>\n",
-        "      <td>                          has car/truck</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv221</th>\n",
-        "      <td>               has telephone (landline)</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv225</th>\n",
-        "      <td>     share toilet with other households</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv227</th>\n",
-        "      <td>      has mosquito bed net for sleeping</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv243a</th>\n",
-        "      <td>                   has mobile telephone</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv243b</th>\n",
-        "      <td>                              has watch</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv243c</th>\n",
-        "      <td>                  has animal-drawn cart</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv243d</th>\n",
-        "      <td>                  has boat with a motor</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv246</th>\n",
-        "      <td> owns livestock, herds, or farm animals</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>hv247</th>\n",
-        "      <td>                       has bank account</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>sh110g</th>\n",
-        "      <td>                               computer</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>sh118f</th>\n",
-        "      <td>                     boat without motor</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "                                     full name\n",
-        "hv206                          has electricity\n",
-        "hv207                                has radio\n",
-        "hv208                           has television\n",
-        "hv209                         has refrigerator\n",
-        "hv210                              has bicycle\n",
-        "hv211                   has motorcycle/scooter\n",
-        "hv212                            has car/truck\n",
-        "hv221                 has telephone (landline)\n",
-        "hv225       share toilet with other households\n",
-        "hv227        has mosquito bed net for sleeping\n",
-        "hv243a                    has mobile telephone\n",
-        "hv243b                               has watch\n",
-        "hv243c                   has animal-drawn cart\n",
-        "hv243d                   has boat with a motor\n",
-        "hv246   owns livestock, herds, or farm animals\n",
-        "hv247                         has bank account\n",
-        "sh110g                                computer\n",
-        "sh118f                      boat without motor"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 14,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -685,7 +467,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -703,7 +485,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -725,7 +507,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -733,15 +515,14 @@
        "slide_type": "-"
       }
      },
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -763,7 +544,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -771,15 +552,14 @@
        "slide_type": "-"
       }
      },
-     "outputs": [],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -801,7 +581,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -809,15 +589,14 @@
        "slide_type": "-"
       }
      },
-     "outputs": [],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 15,
+       "frag_number": 14,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -835,7 +614,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 27,
+       "frag_number": 34,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -851,6 +630,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 34,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -873,7 +654,7 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 27,
+       "frag_number": 34,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -899,8 +680,10 @@
      "metadata": {
       "internals": {
        "frag_helper": "fragment_end",
-       "frag_number": 27
+       "frag_number": 34,
+       "slide_helper": "subslide_end"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "skip"
       }
@@ -954,31 +737,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 16,
        "text": [
         "<IPython.core.display.HTML object>"
        ]
       }
      ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [],
-     "language": "python",
-     "metadata": {
-      "internals": {
-       "frag_helper": "fragment_end",
-       "frag_number": 27,
-       "slide_helper": "subslide_end"
-      },
-      "slide_helper": "slide_end",
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "outputs": []
+     "prompt_number": 16
     }
    ],
    "metadata": {}
